--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "clean": "turbo run clean",
+    "sync-env": "node scripts/sync-env.js",
+    "postinstall": "node scripts/sync-env.js",
     "type-check": "pnpm run type-check:packages && pnpm run type-check:apps",
     "type-check:apps": "pnpm run type-check:web && pnpm run type-check:mobile-customer",
     "type-check:web": "cd apps/web && npx tsc --noEmit",
@@ -21,7 +23,7 @@
     "web:build": "turbo run build --filter=web",
     "web:start": "cd apps/web && pnpm start",
     "web:deploy": "cd apps/web && pnpm run build",
-    "mobile:dev": "turbo run dev --filter=mobile-customer",
+    "mobile:dev": "pnpm run sync-env && turbo run dev --filter=mobile-customer",
     "mobile:build": "turbo run build --filter=mobile-customer",
     "mobile:ios": "turbo run ios --filter=mobile-customer",
     "mobile:android": "turbo run android --filter=mobile-customer",
