--- a/apps/mobile-customer/android/gradle.properties
+++ b/apps/mobile-customer/android/gradle.properties
@@ -58,3 +58,7 @@ expo.useLegacyPackaging=false
 # Whether the app is configured to use edge-to-edge via the app config or `react-native-edge-to-edge` plugin
 expo.edgeToEdgeEnabled=true
 android.extraMavenRepos=[]
+
+# Gradle 9.0 compatibility settings
+org.gradle.warning.mode=all
+android.suppressUnsupportedCompileSdk=35
