--- a/apps/mobile-customer/package.json
+++ b/apps/mobile-customer/package.json
@@ -41,8 +41,8 @@
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/stack": "^7.3.6",
     "expo": "53.0.13",
-    "expo-build-properties": "~0.14.6",
     "expo-asset": "^11.1.5",
+    "expo-build-properties": "~0.14.6",
     "expo-constants": "^17.1.6",
     "expo-file-system": "^18.1.10",
     "expo-font": "^13.3.1",
@@ -55,6 +55,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.4",
+    "react-native-dotenv": "^3.4.11",
     "react-native-maps": "1.20.1",
     "react-native-reanimated": "3.17.4",
     "react-native-safe-area-context": "5.4.0",
