--- a/apps/mobile-customer/package.json
+++ b/apps/mobile-customer/package.json
@@ -47,6 +47,7 @@
     "expo-file-system": "^18.1.10",
     "expo-font": "^13.3.1",
     "expo-linear-gradient": "~14.1.5",
+    "expo-modules-core": "^2.4.0",
     "expo-router": "~5.1.1",
     "expo-status-bar": "~2.2.3",
     "fbjs": "^3.0.5",
@@ -55,7 +56,6 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.4",
-    "react-native-dotenv": "^3.4.11",
     "react-native-maps": "1.20.1",
     "react-native-reanimated": "3.17.4",
     "react-native-safe-area-context": "5.4.0",
