--- a/apps/mobile-customer/package.json
+++ b/apps/mobile-customer/package.json
@@ -51,6 +51,7 @@
     "expo-status-bar": "~2.2.3",
     "fbjs": "^3.0.5",
     "firebase": "^11.8.1",
+    "invariant": "^2.2.4",
     "nativewind": "^2.0.11",
     "react": "19.0.0",
     "react-dom": "19.0.0",
