🔧 Add critical React Native dependencies and Metro aliases
- Add nullthrows dependency required by React Native core
- Update Metro config with explicit aliases for invariant, fbjs, nullthrows
- Ensure proper module resolution for React Native dependencies in EAS Build
- Add fallback resolution for dependencies in PNPM workspace

This should resolve remaining module resolution errors in Bundle JavaScript phase.

--- a/apps/mobile-customer/package.json
+++ b/apps/mobile-customer/package.json
@@ -53,6 +53,7 @@
     "firebase": "^11.8.1",
     "invariant": "^2.2.4",
     "nativewind": "^2.0.11",
+    "nullthrows": "^1.1.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.4",
