--- a/apps/mobile-customer/package.json
+++ b/apps/mobile-customer/package.json
@@ -38,6 +38,7 @@
     "@react-native-firebase/auth": "^22.2.1",
     "@react-native-firebase/firestore": "^22.2.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
+    "@react-navigation/core": "^7.1.6",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/stack": "^7.3.6",
     "expo": "53.0.13",
@@ -47,6 +48,8 @@
     "expo-file-system": "^18.1.10",
     "expo-font": "^13.3.1",
     "expo-linear-gradient": "~14.1.5",
+    "expo-linking": "^7.1.5",
+
     "expo-router": "~5.1.1",
     "expo-status-bar": "~2.2.3",
     "fbjs": "^3.0.5",
@@ -57,6 +60,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.4",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-maps": "1.20.1",
     "react-native-reanimated": "3.17.4",
     "react-native-safe-area-context": "5.4.0",
@@ -65,6 +69,33 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.20.0",
     "react-native-web-linear-gradient": "^1.1.2",
+    "react-native-is-edge-to-edge": "^1.1.4",
+    "react-native-edge-to-edge": "^1.6.0",
+    "@react-native/virtualized-lists": "^0.79.4",
+    "memoize-one": "^6.0.0",
+    "whatwg-url-without-unicode": "^8.0.0-3",
+    "use-sync-external-store": "^1.2.0",
+    "use-latest-callback": "^0.2.1",
+    "@react-navigation/routers": "^7.1.14",
+    "ansi-regex": "^6.1.0",
+    "@react-native/normalize-colors": "^0.79.4",
+    "react-is": "^18.3.1",
+    "query-string": "^9.1.1",
+    "nanoid": "^5.0.9",
+    "escape-string-regexp": "^5.0.0",
+    "@react-navigation/elements": "^2.1.14",
+    "buffer": "^6.0.3",
+    "@react-native/assets-registry": "^0.79.4",
+    "base64-js": "^1.5.1",
+    "stacktrace-parser": "^0.1.10",
+    "css-mediaquery": "^0.1.2",
+    "webidl-conversions": "^7.0.0",
+    "decode-uri-component": "^0.4.1",
+    "ieee754": "^1.2.1",
+    "filter-obj": "^6.1.0",
+    "split-on-first": "^3.0.0",
+    "color": "^4.2.3",
+    "scheduler": "^0.25.0",
     "typescript": "~5.8.3"
   },
   "devDependencies": {
@@ -79,7 +110,8 @@
   "expo": {
     "doctor": {
       "reactNativeDirectoryCheck": {
-        "listUnknownPackages": false
+        "listUnknownPackages": false,
+        "exclude": ["react-native-is-edge-to-edge"]
       }
     }
   },
