--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -44,7 +44,7 @@
     "@react-email/render": "^1.1.2",
     "@reduxjs/toolkit": "^2.8.2",
     "@supabase/supabase-js": "^2.50.0",
-    "@types/react": "^19.1.0",
+    "@types/react": "~19.0.10",
     "@types/react-dom": "^19.1.0",
     "@types/ws": "^8.18.1",
     "@upstash/redis": "^1.35.0",
