--- a/apps/mobile-customer/eas.json
+++ b/apps/mobile-customer/eas.json
@@ -14,7 +14,8 @@
       "env": {
         "NODE_ENV": "development",
         "EXPO_USE_METRO_WORKSPACE_ROOT": "1",
-        "EAS_SKIP_AUTO_FINGERPRINT": "1"
+        "EAS_SKIP_AUTO_FINGERPRINT": "1",
+        "EXPO_USE_COMMUNITY_AUTOLINKING": "1"
       }
     },
     "preview": {
