--- a/package.json
+++ b/package.json
@@ -47,7 +47,12 @@
       "*react-native*",
       "*@babel*",
       "*metro*",
-      "*expo-modules-core*"
+      "*expo-modules-core*",
+      "scheduler",
+      "color-string",
+      "color",
+      "color-convert",
+      "@babel/runtime"
     ],
     "overrides": {
       "@react-native-async-storage/async-storage": "2.1.2",
@@ -73,6 +78,8 @@
     "@headlessui/react": "^2.2.4",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "scheduler": "^0.25.0",
+    "color-string": "^1.9.1"
   }
 }
