--- a/apps/mobile-customer/eas.json
+++ b/apps/mobile-customer/eas.json
@@ -26,11 +26,9 @@
       },
       "env": {
         "NODE_ENV": "production",
-        "EAS_BUILD": "true",
         "EXPO_USE_METRO_WORKSPACE_ROOT": "1",
         "EAS_SKIP_AUTO_FINGERPRINT": "1",
-        "METRO_CACHE": "0",
-        "METRO_CONFIG": "./metro.config.eas.js"
+        "EXPO_USE_COMMUNITY_AUTOLINKING": "1"
       }
     },
     "production": {
