--- a/apps/mobile-customer/package.json
+++ b/apps/mobile-customer/package.json
@@ -26,7 +26,8 @@
     "build:android:aab": "npx expo prebuild --platform android && cd android && ./gradlew bundleRelease",
     "build:android:debug": "npx expo prebuild --platform android && cd android && ./gradlew assembleDebug",
     "prebuild:android": "npx expo prebuild --platform android --clean",
-    "prebuild:clean": "npx expo prebuild --clear"
+    "prebuild:clean": "npx expo prebuild --clear",
+    "postinstall": "bash eas-build-post-install.sh"
   },
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.27.4",
@@ -46,6 +47,7 @@
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/routers": "^7.1.14",
     "@react-navigation/stack": "^7.3.6",
+    "abort-controller": "^3.0.0",
     "ansi-regex": "^6.1.0",
     "base64-js": "^1.5.1",
     "buffer": "^6.0.3",
@@ -56,6 +58,7 @@
     "css-mediaquery": "^0.1.2",
     "decode-uri-component": "^0.4.1",
     "escape-string-regexp": "^5.0.0",
+    "event-target-shim": "^5.0.0",
     "expo": "53.0.13",
     "expo-asset": "^11.1.5",
     "expo-build-properties": "~0.14.6",
@@ -65,7 +68,6 @@
     "expo-font": "^13.3.1",
     "expo-linear-gradient": "~14.1.5",
     "expo-linking": "^7.1.5",
-    "expo-modules-core": "^2.4.0",
     "expo-router": "~5.1.1",
     "expo-status-bar": "~2.2.3",
     "fbjs": "^3.0.5",
@@ -74,13 +76,16 @@
     "hoist-non-react-statics": "^3.3.2",
     "ieee754": "^1.2.1",
     "invariant": "^2.2.4",
+    "is-arrayish": "^0.3.2",
     "memoize-one": "^6.0.0",
     "nanoid": "^5.0.9",
     "nativewind": "^2.0.11",
     "nullthrows": "^1.1.1",
+    "promise": "^8.3.0",
     "query-string": "^9.1.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-freeze": "^1.0.0",
     "react-is": "^18.3.1",
     "react-native": "0.79.4",
     "react-native-edge-to-edge": "^1.6.0",
@@ -94,6 +99,7 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.20.0",
     "react-native-web-linear-gradient": "^1.1.2",
+    "regenerator-runtime": "^0.14.1",
     "scheduler": "^0.25.0",
     "simple-swizzle": "^0.2.2",
     "split-on-first": "^3.0.0",
@@ -101,7 +107,9 @@
     "typescript": "~5.8.3",
     "use-latest-callback": "^0.2.1",
     "use-sync-external-store": "^1.2.0",
+    "warn-once": "^0.1.1",
     "webidl-conversions": "^7.0.0",
+    "whatwg-fetch": "^3.0.0",
     "whatwg-url-without-unicode": "^8.0.0-3"
   },
   "devDependencies": {
