Fix: Add prebuild hook to ensure Expo CLI availability in EAS builds
- Enhanced post-install script to detect expo CLI binary and create symlinks from pnpm structure
- Added prebuild hook that ensures expo CLI is available before build starts
- Creates wrapper scripts to use global expo CLI or npx as fallbacks
- Addresses MODULE_NOT_FOUND error for /home/expo/workingdir/build/apps/mobile-customer/node_modules/expo/bin/cli
- Ensures pnpm expo export:embed command can find the expo CLI binary

--- a/apps/mobile-customer/eas.json
+++ b/apps/mobile-customer/eas.json
@@ -27,7 +27,8 @@
         "NODE_ENV": "production",
         "EXPO_USE_METRO_WORKSPACE_ROOT": "1",
         "EAS_SKIP_AUTO_FINGERPRINT": "1"
-      }
+      },
+      "prebuildCommand": "bash eas-build-prebuild.sh"
     },
     "production": {
       "android": {
