Passing All EAS Expo Preview  Build Phases

--- a/apps/mobile-customer/android/app/build.gradle
+++ b/apps/mobile-customer/android/app/build.gradle
@@ -2,6 +2,9 @@ apply plugin: "com.android.application"
 apply plugin: "org.jetbrains.kotlin.android"
 apply plugin: "com.facebook.react"
 
+// Apply custom script to fix ExpoModulesPackage import issue
+apply from: "../fix-expo-modules-import.gradle"
+
 def projectRoot = rootDir.getAbsoluteFile().getParentFile().getAbsolutePath()
 
 /**
