--- a/apps/mobile-customer/package.json
+++ b/apps/mobile-customer/package.json
@@ -28,13 +28,15 @@
     "build:android:debug": "npx expo prebuild --platform android && cd android && ./gradlew assembleDebug",
     "prebuild:android": "npx expo prebuild --platform android --clean",
     "prebuild:clean": "npx expo prebuild --clear",
-    "postinstall": "bash eas-build-post-install.sh || echo 'Post-install script skipped (not in EAS build environment)'"
+    "postinstall": "node comprehensive-autolinking-fix.js && bash eas-build-post-install.sh || echo 'Post-install script skipped (not in EAS build environment)'"
   },
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.27.4",
     "@babel/runtime": "^7.27.6",
+    "@expo/config-plugins": "~10.1.1",
     "@expo/metro-runtime": "~5.0.4",
     "@expo/vector-icons": "^14.1.0",
+    "expo-modules-core": "2.4.2",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-firebase/app": "^22.2.1",
     "@react-native-firebase/auth": "^22.2.1",
@@ -60,17 +62,19 @@
     "decode-uri-component": "^0.4.1",
     "escape-string-regexp": "^5.0.0",
     "event-target-shim": "^5.0.0",
-    "expo": "53.0.13",
-    "expo-asset": "^11.1.5",
-    "expo-build-properties": "~0.14.6",
-    "expo-constants": "^17.1.6",
-    "expo-dev-client": "^5.2.2",
-    "expo-file-system": "^18.1.10",
-    "expo-font": "^13.3.1",
+    "expo": "53.0.17",
+    "expo-asset": "^11.1.7",
+    "expo-build-properties": "~0.14.8",
+    "expo-constants": "^17.1.7",
+    "expo-dev-client": "^5.2.4",
+    "expo-file-system": "^18.1.11",
+    "expo-font": "^13.3.2",
     "expo-linear-gradient": "~14.1.5",
-    "expo-linking": "^7.1.5",
-    "expo-router": "~5.1.1",
+    "expo-linking": "^7.1.7",
+    "expo-navigation-bar": "^4.2.7",
+    "expo-router": "~5.1.3",
     "expo-status-bar": "~2.2.3",
+    "expo-system-ui": "^5.0.10",
     "fbjs": "^3.0.5",
     "filter-obj": "^6.1.0",
     "firebase": "^11.8.1",
@@ -88,7 +92,7 @@
     "react-dom": "19.0.0",
     "react-freeze": "^1.0.0",
     "react-is": "^18.3.1",
-    "react-native": "0.79.4",
+    "react-native": "0.79.5",
     "react-native-edge-to-edge": "^1.6.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-is-edge-to-edge": "^1.1.4",
@@ -97,6 +101,7 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "^4.11.1",
     "react-native-svg": "15.11.2",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.20.0",
     "react-native-web-linear-gradient": "^1.1.2",
@@ -115,7 +120,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.27.4",
-    "@expo/cli": "^0.24.15",
+    "@expo/cli": "^0.24.18",
     "@react-native-community/cli": "^18.0.0",
     "@types/react": "~19.0.10",
     "babel-preset-expo": "~13.0.0",
