--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "color-name": "^2.0.0",
     "color-string": "^1.9.1",
     "hoist-non-react-statics": "^3.3.2",
+    "nativewind": "2.0.11",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "redux-persist": "^6.0.0",
