Successful Build with Dark Mode

--- a/apps/mobile-customer/app.json
+++ b/apps/mobile-customer/app.json
@@ -56,9 +56,9 @@
     ],
     "extra": {
       "eas": {
-        "projectId": "ef7a580f-cd18-4020-871e-aa6551eba1f0"
+        "projectId": "515473d1-6725-437f-9f9c-171b2aad6c8b"
       }
     },
-    "owner": "tap2go9o"
+    "owner": "tap2go9r"
   }
 }
