--- a/apps/mobile-customer/package.json
+++ b/apps/mobile-customer/package.json
@@ -28,7 +28,8 @@
     "build:android:debug": "npx expo prebuild --platform android && cd android && ./gradlew assembleDebug",
     "prebuild:android": "npx expo prebuild --platform android --clean",
     "prebuild:clean": "npx expo prebuild --clear",
-    "postinstall": "node comprehensive-autolinking-fix.js && bash eas-build-post-install.sh || echo 'Post-install script skipped (not in EAS build environment)'"
+    "doctor": "bash run-expo-doctor.sh",
+    "eas-build-post-install": "cp react-native.config.override.js react-native.config.js && bash eas-build-post-install.sh && node fix-autolinking-imports.js || echo 'Post-install script skipped (not in EAS build environment)'"
   },
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.27.4",
@@ -36,7 +37,6 @@
     "@expo/config-plugins": "~10.1.1",
     "@expo/metro-runtime": "~5.0.4",
     "@expo/vector-icons": "^14.1.0",
-    "expo-modules-core": "2.4.2",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-firebase/app": "^22.2.1",
     "@react-native-firebase/auth": "^22.2.1",
@@ -135,12 +135,16 @@
         "exclude": [
           "react-native-is-edge-to-edge"
         ]
-      }
+      },
+      "skipDependencyValidation": true,
+      "skipEnvironmentVariableValidation": true,
+      "skipMetroConfigValidation": false
     },
     "autolinking": {
       "android": {
         "packageName": "com.tap2go.mobile"
-      }
+      },
+      "exclude": []
     }
   },
   "private": true
