--- a/apps/web-driver/vercel.json
+++ b/apps/web-driver/vercel.json
@@ -1,18 +1,24 @@
 {
   "version": 2,
   "framework": "nextjs",
+  "buildCommand": "cd ../.. && pnpm install --frozen-lockfile && pnpm build --filter=web-driver",
+  "outputDirectory": ".next",
+  "installCommand": "cd ../.. && pnpm install --frozen-lockfile",
   "functions": {
     "src/app/api/**/*.ts": {
       "maxDuration": 30
     }
   },
   "env": {
-    "NODE_VERSION": "20",
-    "NEXT_TELEMETRY_DISABLED": "1"
+    "NODE_VERSION": "22",
+    "NEXT_TELEMETRY_DISABLED": "1",
+    "ENABLE_EXPERIMENTAL_COREPACK": "1"
   },
   "build": {
     "env": {
-      "NEXT_TELEMETRY_DISABLED": "1"
+      "NODE_VERSION": "22",
+      "NEXT_TELEMETRY_DISABLED": "1",
+      "ENABLE_EXPERIMENTAL_COREPACK": "1"
     }
   },
   "headers": [
