--- a/package.json
+++ b/package.json
@@ -28,6 +28,14 @@
     "web-driver:build": "turbo run build --filter=web-driver",
     "web-driver:start": "cd apps/web-driver && pnpm start",
     "web-driver:deploy": "cd apps/web-driver && pnpm run build",
+    "web-admin:dev": "turbo run dev --filter=web-admin",
+    "web-admin:build": "turbo run build --filter=web-admin",
+    "web-admin:start": "cd apps/web-admin && pnpm start",
+    "web-admin:deploy": "cd apps/web-admin && pnpm run build",
+    "web-vendor:dev": "turbo run dev --filter=web-vendor",
+    "web-vendor:build": "turbo run build --filter=web-vendor",
+    "web-vendor:start": "cd apps/web-vendor && pnpm start",
+    "web-vendor:deploy": "cd apps/web-vendor && pnpm run build",
     "mobile:dev": "pnpm run sync-env && turbo run dev --filter=mobile-customer",
     "mobile:build": "turbo run build --filter=mobile-customer",
     "mobile:ios": "turbo run ios --filter=mobile-customer",
