--- a/apps/web-driver/package.json
+++ b/apps/web-driver/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.2.0",
     "firebase": "^11.8.1",
     "firebase-config": "workspace:*",
+    "database": "workspace:*",
     "shared-types": "workspace:*",
     "next": "15.3.5",
     "react": "^19.0.0",
