--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -2,14 +2,20 @@
   "name": "database",
   "version": "0.1.0",
   "private": true,
-  "main": "./src/index.ts",
-  "types": "./src/index.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    }
+  },
   "scripts": {
     "build": "npx tsc",
     "dev": "npx tsc --watch",
     "lint": "eslint src/",
     "type-check": "npx tsc --noEmit",
-    "clean": "rm -rf dist"
+    "clean": "rimraf dist"
   },
   "dependencies": {
     "firebase": "^11.8.1",
@@ -19,6 +25,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.17.57",
+    "rimraf": "^6.0.1",
     "typescript": "^5.8.3"
   }
 }
