--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "scripts": {
     "dev": "pnpm exec next dev --turbopack",
-    "build": "npm run patch-styled-jsx && npx next build",
+    "build": "pnpm run patch-styled-jsx && pnpm exec next build",
     "start": "pnpm exec next start",
     "lint": "pnpm exec next lint",
     "type-check": "tsc --noEmit",
     "clean": "rm -rf .next",
     "patch-styled-jsx": "node scripts/patch-styled-jsx.js",
-    "postinstall": "npm run patch-styled-jsx",
+    "postinstall": "pnpm run patch-styled-jsx",
     "update-system-docs": "node scripts/update-system-docs.js",
     "add-restaurants": "node scripts/add-sample-restaurants.js",
     "clear-db": "node scripts/clear-database.js --confirm",
