--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   ],
   "scripts": {
     "build": "turbo run build",
-    "build:packages": "turbo run build --filter='./packages/*'",
+    "build:packages": "pnpm exec turbo run build --filter='./packages/*'",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "clean": "turbo run clean",
@@ -16,9 +16,9 @@
     "postinstall": "node scripts/sync-env.js",
     "type-check": "pnpm run type-check:packages && pnpm run type-check:apps",
     "type-check:apps": "pnpm run type-check:web && pnpm run type-check:web-driver && pnpm run type-check:mobile-customer",
-    "type-check:web": "cd apps/web && npx tsc --noEmit",
-    "type-check:web-driver": "cd apps/web-driver && npx tsc --noEmit",
-    "type-check:mobile-customer": "cd apps/mobile-customer && npx tsc --noEmit",
+    "type-check:web": "cd apps/web && pnpm exec tsc --noEmit",
+    "type-check:web-driver": "cd apps/web-driver && pnpm exec tsc --noEmit",
+    "type-check:mobile-customer": "cd apps/mobile-customer && pnpm exec tsc --noEmit",
     "type-check:packages": "tsc --build",
     "type-check:turbo": "turbo run type-check",
     "web:dev": "turbo run dev --filter=web",
