--- a/packages/shared-types/package.json
+++ b/packages/shared-types/package.json
@@ -2,22 +2,29 @@
   "name": "shared-types",
   "version": "0.1.0",
   "private": true,
-  "main": "./src/index.ts",
-  "types": "./src/index.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    }
+  },
   "scripts": {
-    "build": "npx tsc",
-    "dev": "npx tsc --watch",
+    "build": "pnpm exec tsc",
+    "dev": "pnpm exec tsc --watch",
     "lint": "eslint src/",
-    "type-check": "npx tsc --noEmit",
-    "clean": "rm -rf dist"
+    "type-check": "pnpm exec tsc --noEmit",
+    "clean": "rimraf dist"
   },
   "peerDependencies": {
     "react": "^19.0.0",
-    "@types/react": "^19.1.0"
+    "@types/react": "~19.0.10"
   },
   "devDependencies": {
     "react": "^19.0.0",
-    "@types/react": "^19.1.0",
+    "@types/react": "~19.0.10",
+    "rimraf": "^6.0.1",
     "typescript": "^5.8.3"
   }
 }
