--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   ],
   "scripts": {
     "build": "turbo run build",
-    "build:packages": "pnpm exec turbo run build --filter='./packages/*'",
+    "build:packages": "pnpm exec turbo run build --filter=\"./packages/*\"",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "clean": "turbo run clean",
@@ -48,6 +48,22 @@
     "@turbo/gen": "^2.0.0",
     "next": "15.3.2",
     "turbo": "^2.0.0",
+    "typescript": "5.8.3"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.27.6",
+    "@headlessui/react": "^2.2.4",
+    "color": "^4.2.3",
+    "color-convert": "^3.1.0",
+    "color-name": "^2.0.0",
+    "color-string": "^1.9.1",
+    "hoist-non-react-statics": "^3.3.2",
+    "nativewind": "2.0.11",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "redux-persist": "^6.0.0",
+    "scheduler": "^0.25.0",
+    "simple-swizzle": "^0.2.2",
     "typescript": "5.8.3"
   },
   "packageManager": "pnpm@8.15.6",
