--- a/packages/shared-types/package.json
+++ b/packages/shared-types/package.json
@@ -23,10 +23,10 @@
   },
   "dependencies": {
     "react": "^19.0.0",
-    "@types/react": "~19.0.10"
+    "@types/react": "~19.0.10",
+    "typescript": "^5.8.3"
   },
   "devDependencies": {
-    "rimraf": "^6.0.1",
-    "typescript": "^5.8.3"
+    "rimraf": "^6.0.1"
   }
 }
