--- a/packages/api-client/package.json
+++ b/packages/api-client/package.json
@@ -5,20 +5,20 @@
   "main": "./src/index.ts",
   "types": "./src/index.ts",
   "scripts": {
-    "build": "npx tsc",
-    "dev": "npx tsc --watch",
+    "build": "tsc",
+    "dev": "tsc --watch",
     "lint": "eslint src/",
-    "type-check": "npx tsc --noEmit",
+    "type-check": "tsc --noEmit",
     "clean": "rm -rf dist"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.9.0",
     "shared-types": "workspace:*",
-    "shared-utils": "workspace:*"
+    "shared-utils": "workspace:*",
+    "typescript": "^5.8.3"
   },
   "devDependencies": {
-    "@types/node": "^20.17.57",
-    "typescript": "^5.8.3"
+    "@types/node": "^20.17.57"
   }
 }
