--- a/packages/business-logic/package.json
+++ b/packages/business-logic/package.json
@@ -5,18 +5,18 @@
   "main": "./src/index.ts",
   "types": "./src/index.ts",
   "scripts": {
-    "build": "npx tsc",
-    "dev": "npx tsc --watch",
+    "build": "tsc",
+    "dev": "tsc --watch",
     "lint": "eslint src/",
-    "type-check": "npx tsc --noEmit",
+    "type-check": "tsc --noEmit",
     "clean": "rm -rf dist"
   },
   "dependencies": {
     "shared-types": "workspace:*",
     "shared-utils": "workspace:*",
-    "api-client": "workspace:*"
+    "api-client": "workspace:*",
+    "typescript": "^5.8.3"
   },
   "devDependencies": {
-    "typescript": "^5.8.3"
   }
 }
