--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# Firebase Configuration for the Tap2Go
+# Firebase Configuration for Tap2Go
 # These environment variables are used by src/lib/firebase.ts
 
 NEXT_PUBLIC_FIREBASE_API_KEY=your_firebase_api_key_here
