--- a/apps/web-driver/vercel.json
+++ b/apps/web-driver/vercel.json
@@ -1,11 +1,13 @@
 {
   "version": 2,
   "framework": "nextjs",
-  "buildCommand": "cd ../.. && pnpm install --frozen-lockfile && pnpm run build:packages && pnpm exec turbo run build --filter=web-driver",
-  "outputDirectory": ".next",
-  "installCommand": "cd ../.. && pnpm install --frozen-lockfile",
   "env": {
     "NODE_VERSION": "22",
     "NEXT_TELEMETRY_DISABLED": "1"
+  },
+  "build": {
+    "env": {
+      "NEXT_TELEMETRY_DISABLED": "1"
+    }
   }
 }
