--- a/packages/firebase-config/package.json
+++ b/packages/firebase-config/package.json
@@ -21,10 +21,10 @@
     "firebase": "^11.8.1",
     "firebase-admin": "^13.4.0",
     "shared-types": "workspace:*",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "@types/node": "^20.17.57"
   },
   "devDependencies": {
-    "@types/node": "^20.17.57",
     "rimraf": "^6.0.1"
   }
 }
