--- a/apps/web-driver/package.json
+++ b/apps/web-driver/package.json
@@ -14,6 +14,7 @@
     "firebase-config": "workspace:*",
     "database": "workspace:*",
     "shared-types": "workspace:*",
+    "shared-auth": "workspace:*",
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
