--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -74,6 +74,7 @@
     "reselect": "^5.1.1",
     "resend": "^4.5.2",
     "shared-types": "workspace:*",
+    "shared-auth": "workspace:*",
     "shared-ui": "workspace:*",
     "shared-utils": "workspace:*",
     "ws": "^8.18.2"
