--- a/packages/shared-auth/package.json
+++ b/packages/shared-auth/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@types/react": "^19.0.14",
+    "@types/node": "^20.19.2",
     "typescript": "^5.8.3"
   },
   "peerDependencies": {
