--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,6 @@
       "DOM.Iterable",
       "ES6"
     ],
-    "types": ["node"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -51,5 +50,6 @@
     }
   ],
   "files": [],
-  "include": []
+  "include": [],
+  "extends": "expo/tsconfig.base"
 }
