--- a/package.json
+++ b/package.json
@@ -8,19 +8,22 @@
   ],
   "scripts": {
     "build": "turbo run build",
-    "build:packages": "pnpm exec turbo run build --filter=\"./packages/*\"",
+    "build:packages": "turbo run build --filter=\"./packages/*\"",
+    "build:apps": "turbo run build --filter=\"./apps/*\"",
+    "build:parallel": "turbo run build --parallel",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
+    "lint:fix": "turbo run lint -- --fix",
     "clean": "turbo run clean",
     "sync-env": "node scripts/sync-env.js",
     "postinstall": "node scripts/sync-env.js",
-    "type-check": "pnpm run type-check:packages && pnpm run type-check:apps",
-    "type-check:apps": "pnpm run type-check:web && pnpm run type-check:web-driver && pnpm run type-check:mobile-customer",
-    "type-check:web": "cd apps/web && pnpm exec tsc --noEmit",
-    "type-check:web-driver": "cd apps/web-driver && pnpm exec tsc --noEmit",
-    "type-check:mobile-customer": "cd apps/mobile-customer && pnpm exec tsc --noEmit",
-    "type-check:packages": "tsc --build",
-    "type-check:turbo": "turbo run type-check",
+    "type-check": "turbo run type-check",
+    "type-check:packages": "turbo run type-check --filter=\"./packages/*\"",
+    "type-check:apps": "turbo run type-check --filter=\"./apps/*\"",
+    "type-check:web": "turbo run type-check --filter=web",
+    "type-check:web-driver": "turbo run type-check --filter=web-driver",
+    "type-check:web-admin": "turbo run type-check --filter=web-admin",
+    "type-check:mobile-customer": "turbo run type-check --filter=mobile-customer",
     "web:dev": "turbo run dev --filter=web",
     "web:build": "turbo run build --filter=web",
     "web:start": "cd apps/web && pnpm start",
