--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "config",
+  "name": "@tap2go/config",
   "version": "0.1.0",
   "private": true,
   "main": "./src/index.ts",
@@ -12,7 +12,7 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "shared-types": "workspace:*",
+    "@tap2go/shared-types": "workspace:*",
     "typescript": "^5.8.3",
     "@types/node": "^20.17.57"
   },
