--- a/apps/web-admin/package.json
+++ b/apps/web-admin/package.json
@@ -3,15 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack --port 3003",
+    "dev": "next dev --turbopack --port 3004",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.5"
+    "next": "15.3.5",
+    "@heroicons/react": "^2.2.0",
+    "@tap2go/shared-auth": "workspace:*",
+    "@tap2go/shared-ui": "workspace:*",
+    "@tap2go/shared-types": "workspace:*",
+    "@tap2go/firebase-config": "workspace:*",
+    "@tap2go/database": "workspace:*"
   },
   "devDependencies": {
     "typescript": "^5",
