--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -48,19 +48,19 @@
     "@types/react-dom": "^19.1.0",
     "@types/ws": "^8.18.1",
     "@upstash/redis": "^1.35.0",
-    "api-client": "workspace:*",
+    "@tap2go/api-client": "workspace:*",
     "axios": "^1.9.0",
-    "business-logic": "workspace:*",
+    "@tap2go/business-logic": "workspace:*",
     "cloudinary": "^2.6.1",
-    "config": "workspace:*",
+    "@tap2go/config": "workspace:*",
     "crypto-js": "^4.2.0",
-    "database": "workspace:*",
+    "@tap2go/database": "workspace:*",
     "dotenv": "^16.5.0",
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
     "firebase": "^11.8.1",
     "firebase-admin": "^13.4.0",
-    "firebase-config": "workspace:*",
+    "@tap2go/firebase-config": "workspace:*",
     "form-data": "^4.0.3",
     "ioredis": "^5.4.1",
     "lucide-react": "^0.511.0",
@@ -73,10 +73,10 @@
     "redux-persist": "^6.0.0",
     "reselect": "^5.1.1",
     "resend": "^4.5.2",
-    "shared-types": "workspace:*",
-    "shared-auth": "workspace:*",
-    "shared-ui": "workspace:*",
-    "shared-utils": "workspace:*",
+    "@tap2go/shared-types": "workspace:*",
+    "@tap2go/shared-auth": "workspace:*",
+    "@tap2go/shared-ui": "workspace:*",
+    "@tap2go/shared-utils": "workspace:*",
     "ws": "^8.18.2"
   },
   "devDependencies": {
