--- a/packages/shared-utils/package.json
+++ b/packages/shared-utils/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shared-utils",
+  "name": "@tap2go/shared-utils",
   "version": "0.1.0",
   "private": true,
   "main": "./src/index.ts",
@@ -12,7 +12,7 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "shared-types": "workspace:*",
+    "@tap2go/shared-types": "workspace:*",
     "typescript": "^5.8.3"
   },
   "devDependencies": {
