--- a/turbo.json
+++ b/turbo.json
@@ -82,30 +82,44 @@
         "VERCEL",
         "VERCEL_URL",
         "VERCEL_ENV"
+      ],
+      "passThroughEnv": [
+        "FIREBASE_ADMIN_PROJECT_ID",
+        "FIREBASE_ADMIN_PRIVATE_KEY",
+        "FIREBASE_ADMIN_CLIENT_EMAIL",
+        "NEXT_PUBLIC_FIREBASE_API_KEY",
+        "NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN",
+        "NEXT_PUBLIC_FIREBASE_PROJECT_ID"
       ]
     },
     "dev": {
       "cache": false,
-      "persistent": true
+      "persistent": true,
+      "passThroughEnv": ["*"]
     },
     "lint": {
       "dependsOn": ["^build"],
+      "outputs": ["eslint-report.json"],
       "env": ["NODE_VERSION", "NEXT_TELEMETRY_DISABLED", "NODE_ENV"]
     },
     "type-check": {
       "dependsOn": ["^build"],
+      "outputs": ["*.tsbuildinfo"],
       "env": ["NODE_VERSION", "NEXT_TELEMETRY_DISABLED", "NODE_ENV"]
     },
+
     "clean": {
       "cache": false
     },
     "ios": {
       "cache": false,
-      "persistent": true
+      "persistent": true,
+      "dependsOn": ["^build"]
     },
     "android": {
       "cache": false,
-      "persistent": true
+      "persistent": true,
+      "dependsOn": ["^build"]
     }
   }
 }
