--- a/apps/web-admin/vercel.json
+++ b/apps/web-admin/vercel.json
@@ -1,11 +1,10 @@
 {
   "version": 2,
   "framework": "nextjs",
-  "buildCommand": "cd ../.. && pnpm build --filter=web-admin",
-  "outputDirectory": ".next",
-  "installCommand": "cd ../.. && pnpm install --frozen-lockfile",
+  "buildCommand": "turbo run build",
+  "installCommand": "pnpm install",
   "env": {
-    "NODE_VERSION": "22",
+    "NODE_VERSION": "20",
     "NEXT_TELEMETRY_DISABLED": "1"
   }
 }
