--- a/apps/web-driver/vercel.json
+++ b/apps/web-driver/vercel.json
@@ -1,13 +1,10 @@
 {
   "version": 2,
   "framework": "nextjs",
+  "buildCommand": "turbo run build",
+  "installCommand": "pnpm install",
   "env": {
     "NODE_VERSION": "20",
     "NEXT_TELEMETRY_DISABLED": "1"
-  },
-  "build": {
-    "env": {
-      "NEXT_TELEMETRY_DISABLED": "1"
-    }
   }
 }
