--- a/apps/web-admin/package.json
+++ b/apps/web-admin/package.json
@@ -10,25 +10,28 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.3.5",
+    "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
-    "@tap2go/shared-auth": "workspace:*",
-    "@tap2go/shared-ui": "workspace:*",
-    "@tap2go/shared-types": "workspace:*",
+    "@tap2go/database": "workspace:*",
     "@tap2go/firebase-config": "workspace:*",
-    "@tap2go/database": "workspace:*"
+    "@tap2go/shared-auth": "workspace:*",
+    "@tap2go/shared-types": "workspace:*",
+    "@tap2go/shared-ui": "workspace:*",
+    "echarts": "^5.6.0",
+    "echarts-for-react": "^3.0.2",
+    "next": "15.3.5",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
