--- a/apps/web-admin/package.json
+++ b/apps/web-admin/package.json
@@ -17,8 +17,10 @@
     "@tap2go/shared-auth": "workspace:*",
     "@tap2go/shared-types": "workspace:*",
     "@tap2go/shared-ui": "workspace:*",
+    "@types/jsonwebtoken": "^9.0.10",
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
+    "jsonwebtoken": "^9.0.2",
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
